--- a/css/main.css
+++ b/css/main.css
@@ -50,32 +50,34 @@ audio{
 }
 
 #total{
-  position: absolute;
-  top: 20em;
-  padding-left:0px;
-  width:800px;
-  bottom: 0;
-  left:0;
-  margin-left:0px;
-  margin-right: auto ;
-}
-#winningImage{
-  position: absolute;
-  padding-left:0px;
-    top: 20em;
-  bottom: 0;
-  left:0;
-  margin-left:0px;
-  margin-right: auto ;
-}
-#holder{
-  position: absolute;
+  margin-top: -550px;
   top: 20em;
   padding-left:auto;
   padding-right:auto;
   width:800px;
   bottom: 0;
   left:0;
-  margin-left:auto;
+  margin-left: auto;
   margin-right: auto ;
+  min-height:550px;
+}
+#winningImage{
+  position: absolute;
+  padding-left:0px;
+  top: 20em;
+  bottom: 0;
+  left:0;
+  margin-left:0px;
+  margin-right: auto ;
+}
+#holder{
+  top: 20em;
+  padding-left:auto;
+  padding-right:auto;
+  width:800px;
+  bottom: 0;
+  left:0;
+  margin-left: auto;
+  margin-right: auto ;
+  min-height:550px;
 }
